[package]
name = "synapse-admin-api"
version = "0.6.0"
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the synapse admin API."
homepage = "https://ruma.dev/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
repository = "https://github.com/ruma/synapse-admin-api"
edition = "2018"

[features]
client = []
server = []

shared-secret-registration-mac = ["dep:hex", "dep:hmac", "dep:sha1"]

[dependencies]
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", optional = true }
ruma = { version = "0.12.0", features = ["api", "events"] }
serde = { version = "1.0.118", features = ["derive"] }
sha1 = { version = "0.10.1", optional = true }

[dev-dependencies]
serde_json = "1.0.61"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ruma_unstable_exhaustive_types)', # set all types as exhaustive
] }
